--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-latest": "^6.24.0",
     "css-loader": "^0.27.3",
     "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.2",
+    "node-sass": "^4.5.1",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.15.0",
     "webpack": "^2.2.1"
   }
