--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "babel-loader": "^6.4.1",
     "babel-preset-latest": "^6.24.0",
     "css-loader": "^0.27.3",
+    "ejs-loader": "^0.3.0",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "image-webpack-loader": "^3.2.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
     "node-sass": "^4.5.1",
@@ -23,6 +27,7 @@
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.15.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   }
 }
